Se creo la página de register.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header-login">
         <img src="./img/Logo_horizontal color.png" alt="" class="header__img">
     </header>
 
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <p class="login__container--register">
-                No tienes ninguna cuenta <a href="#">Registrate</a>
+                No tienes ninguna cuenta <a href="registrer.html">Registrate</a>
             </p>
         </div>
     </div>
